openshift/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocp-virt-app-web
  namespace: jkeam
  labels:
    app: ocp-virt-app-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocp-virt-app-web
  template:
    metadata:
      labels:
        app: ocp-virt-app-web
    spec:
      serviceAccountName: ocp-virt-app
      containers:
      - name: ocp-virt-app-web
        image: quay.io/jkeam/openshift-virt-app-web
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 2
          periodSeconds: 2
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ocp-virt-app-web
  name: ocp-virt-app-web
  namespace: jkeam
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: ocp-virt-app-web
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ocp-virt-app-web
  namespace: jkeam
spec:
  port:
    targetPort: 3000
  tls:
    termination: edge
  to:
    name: ocp-virt-app-web
