openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocp-virt-app-api
  namespace: jkeam
  labels:
    app: ocp-virt-app-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocp-virt-app-api
  template:
    metadata:
      labels:
        app: ocp-virt-app-api
    spec:
      serviceAccountName: ocp-virt-app-api
      containers:
      - name: ocp-virt-app-api
        image: "quay.io/jkeam/openshift-virt-app@sha256:2d9bd7bd79200d16b95700ac6ba8cbba8fb2161901931eecd0ece67871bd2f31"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 2
          periodSeconds: 2
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ocp-virt-app-api
  name: ocp-virt-app-api
  namespace: jkeam
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ocp-virt-app-api
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ocp-virt-app-api
  namespace: jkeam
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    name: ocp-virt-app-api
